2009-05-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-render-manager.c (hd_render_manager_place_titlebar_elements):
	  Make sure the status area actor is moved when it is supposed to.
	  Fixes the problem when the SA was crammed on the top of the tasks
	  button.

2009-05-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Workaround for 'gadget held portrait, launch calculator case'.
	Workaround for 'have calculator on top and receive a call'.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_should_be_portrait):
	  Take current but invisible clients into account again.
	  Make requesting fullscreen clients override.

2009-05-06  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	NB#111652 legacy widget : application menu is not horizontally
	aligned application title text

	* src/home/hd-render-manager.c:
	* src/home/hd-render-manager.h:
	* src/home/hd-title-bar.c:
	* src/home/hd-title-bar.h:
	* src/mb/hd-theme.c:

	Add get_title_xy functions to various classes to retrieve the
	current position of the window title.

2009-05-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Portrait mode switching improvements.
	Fixes the problem with switching from a portrait-requesting client
	to a non-supporting one caused rotation.
	Fixes the problem with accepting call in portrait mode incoming call
	dialog, which left the call application in landscape.

	* src/mb/hd-wm.c (hd_wm_client_activate):
	  Do the real activation and restacking before changing state.
	  As a side effect it appears to fix with giving momentary focus
	  to clients we're switching away from.  It'll be interesting to
	  see how many other things will it break.
	* src/home/hd-switcher.c (hd_switcher_zoom_in_complete):
	  Don't change state, just rely on client activation.
	* src/util/hd-util.c (hd_util_change_screen_orientation):
	  Make the rotation transition more robust.  Previously if mixed up
	  things when attempted in parallel, now it should recover gracefully