@@ -1,5 +1,11 @@
 2009-05-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
+	* src/main.c:
+	  Adding the '-d' command line switch to get a debug info dump
+	  from an an already running window manager.
+
+2009-05-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
 	* src/home/hd-render-manager.c (hd_render_manager_place_titlebar_elements):
 	  Make sure the status area actor is moved when it is supposed to.
 	  Fixes the problem when the SA was crammed on the top of the tasks
